chore: Install request-promise-native and async libraries, add gitignore file

--- a/package.json
+++ b/package.json
@@ -7,5 +7,9 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Justin Pacubas",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "async": "^2.6.0",
+    "request-promise-native": "^1.0.5"
+  }
 }
