--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "MIT",
   "dependencies": {
     "async": "^2.6.0",
+    "request": "^2.83.0",
     "request-promise-native": "^1.0.5"
   }
 }
